# EasyYYJSON

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
examples/: example_read.cpp
include/: easy_yyjson.hpp
src/: easy-yyjson.cpp  easy-yyjson.hpp  easy_yyjson.cpp
